[gd_scene load_steps=8 format=3 uid="uid://bos5w3mtdlx3e"]

[ext_resource type="Environment" uid="uid://bklfqfi8vxoon" path="res://levels/environment.tres" id="1_2aqmi"]
[ext_resource type="Script" uid="uid://xdlsvh0qmnqc" path="res://levels/drive_level.gd" id="1_6w0gw"]
[ext_resource type="PackedScene" uid="uid://by3vo67aumu0w" path="res://vehicles/sports_car_manual.tscn" id="3_rwa1m"]
[ext_resource type="PackedScene" uid="uid://bep7obj2mm720" path="res://vehicles/rays7_rev.tscn" id="4_83u3i"]
[ext_resource type="PackedScene" uid="uid://bamu3gqsjmyv" path="res://gui/right_panel_drive.tscn" id="6_vjt65"]
[ext_resource type="PackedScene" uid="uid://2vo344rbyl4g" path="res://gui/visualizer.tscn" id="7_bs7gy"]
[ext_resource type="PackedScene" uid="uid://b85k7o14f20hk" path="res://gui/monologue.tscn" id="7_vjt65"]

[node name="DriveLevel" type="Node3D"]
script = ExtResource("1_6w0gw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_2aqmi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.423822, -0.276941, -0.862368, 0.277341, -0.866695, 0.414634, -0.862239, -0.414901, -0.290517, 11.0084, 12.3453, -31.3148)
light_energy = 0.5
light_indirect_energy = 0.5
shadow_enabled = true
shadow_bias = 0.015
shadow_blur = 1.5
directional_shadow_mode = 0
directional_shadow_max_distance = 80.0

[node name="Cars" type="Node" parent="."]

[node name="CameraBase" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 10)

[node name="Camera3D" type="Camera3D" parent="CameraBase"]
transform = Transform3D(1, 0, 0, 0, 0.516533, 0.856267, 0, -0.856267, 0.516533, 0, 26.4679, 8.50163)
cull_mask = 1048573
fov = 74.0
near = 0.1

[node name="AudioListener3D" type="AudioListener3D" parent="CameraBase/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.516533, -0.856267, 0, 0.856267, 0.516533, 0, 0, 0)
current = true

[node name="PlayerCar" parent="." instance=ExtResource("3_rwa1m")]

[node name="RevRayCasts" parent="." instance=ExtResource("4_83u3i")]

[node name="RightPanel" parent="." instance=ExtResource("6_vjt65")]
offset_left = -272.0

[node name="Visualizer" parent="." instance=ExtResource("7_bs7gy")]
visible = false
scale = Vector2(0.8, 0.8)
mouse_filter = 2

[node name="Monologue" parent="." instance=ExtResource("7_vjt65")]
